--- a/index.html
+++ b/index.html
@@ -53,18 +53,18 @@
         0.1, 0, 0.1, 0, 0.1"
         xSpacing="1" zSpacing="1" solid="false">
         </ElevationGrid>
-        </shape>
+        </Shape>
         </transform>
         <transform DEF="Vsevmeste">
         <transform translation="-2.2 -2.4 0" rotation="1 0 0 -1.57">
-          <shape>
+          <Shape>
             <Appearance>
               <ImageTexture url="raketa.jpg"></ImageTexture>
               </Appearance>
             <IndexedTriangleSet index="0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20" solid="false">
               <Coordinate point="0.5 0 0.5, 1.5 0 0.5, 1.5 0 1.5, 2.5 0 0.5, 2.5 0 1.5, 3.5 0 0.5, 1.5 0 1, 2.5 0 1, 2.5 0 2, 1.5 0 1, 1.5 0 2, 2.5 0 2, 1.5 0 2, 1.5 0 3, 2.5 0 2, 1.5 0 3, 2.5 0 3, 2.5 0 2, 1 0 3, 2 0 4, 3 0 3"></Coordinate>
              </IndexedTriangleSet>
-          </shape>
+          </Shape>
         </transform>
         <transform translation='-0.25 -2.4 0' rotation='0 0 0 0'>
           <Shape>
