--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<html><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <title>Lab4</title>
-    <link rel="stylesheet" href="Lab4_files/x3dom.htm"></link>
+    <link rel="stylesheet" href="Lab4_files/x3dom.htm" />
     <script src="Lab4_files/x3dom.js"></script>
 </head>
       <body>
