--- a/index.html
+++ b/index.html
@@ -373,6 +373,8 @@
         </ROUTE>
         <ROUTE fromNode='PosInt' fromField='value_changed' 
                toNode='Trans' toField='set_translation'>
+        </ROUTE>
+
         </scene>
     </X3D>
 <script>
