--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>laba1</title>
     <script src="http://www.x3dom.org/download/dev/x3dom.js"></script>
-    <link rel="stylesheet" href="http://www.x3dom.org/download/dev/x3dom.css">
+    <link rel="stylesheet" href="http://www.x3dom.org/download/dev/x3dom.css" />
 
 </head>
 <body>
