--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>laba1</title>
     <script src="http://www.x3dom.org/download/dev/x3dom.js"></script>
     <link rel="stylesheet" href="http://www.x3dom.org/download/dev/x3dom.css" />
