--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <imagetexture url="./e084a38fec0513346b01c0f7666ca669.jpg"></imagetexture>
                         <texturetransform scale="1 1"></texturetransform>
                     </appearance>
-                    <cylinder  height="1" Radius = "0.2"> </sphere>
+                    <cylinder  height="1" Radius = "0.2"> </cylinder>
                 </shape>
             </transform>
 
