--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <Appearance>
               <Material diffusecolor="0.05 0.4 1"  specularcolor="0.1 0.1 0.1"></Material>
               </Appearance>
-            <IndexedFaceSet ccw="true" colorPerVertex="false" solid="false" creaseAngle="3.14" solid="false"
+            <IndexedFaceSet ccw="true" colorPerVertex="false" creaseAngle="3.14" solid="false"
                                        coordIndex="0 1 17 -1   1 2 17 -1   2 3 17 -1   3 16 17 -1   3 4 16 -1   4 15 16 -1   4 5 15 -1   5 14 15 -1   5 6 14 -1   6 13 14 -1   6 7 13 -1   7 8 12 -1   7 12 13 -1   8 9 11 -1   8 11 12 -1   9 10 11 -1">
             <Coordinate point="1.5 0 3.15, 1.45 0 3.3, 1.3 0.25 3.5, 1.35 0.6 3.4, 1.4 0.9 3.25, 1.35 1.1 2.7, 1.33 1.1 2.2, 1.43 0.9 1.83, 1.35 0.45 1.6, 1.3 0.1 1.6, 1.5 0.05 1.9, 1.5 0.3 1.9, 1.5 0.6 1.97,
              1.5 0.82 2.2, 1.5 0.9 2.5, 1.5 0.82 2.8, 1.5 0.6 3.03, 1.5 0.3 3.12"></Coordinate>       
@@ -143,7 +143,7 @@
             <Appearance>
               <Material diffusecolor="0.05 0.4 1"  specularcolor="0.1 0.1 0.1"></Material>
               </Appearance>
-            <IndexedFaceSet ccw="true" colorPerVertex="false" solid="false" creaseAngle="3.14" solid="false"
+            <IndexedFaceSet ccw="true" colorPerVertex="false" creaseAngle="3.14" solid="false"
                                        coordIndex="0 1 17 -1   1 2 17 -1   2 3 17 -1   3 16 17 -1   3 4 16 -1   4 15 16 -1   4 5 15 -1   5 14 15 -1   5 6 14 -1   6 13 14 -1   6 7 13 -1   7 8 12 -1   7 12 13 -1   8 9 11 -1   8 11 12 -1   9 10 11 -1">
             <Coordinate point="-1.5 0 3.15, -1.45 0 3.3, -1.3 0.25 3.5, -1.35 0.6 3.4, -1.4 0.9 3.25, -1.35 1.1 2.7, -1.33 1.1 2.2, -1.43 0.9 1.83, -1.35 0.45 1.6, -1.3 0.1 1.6, -1.5 0.05 1.9, -1.5 0.3 1.9, -1.5 0.6 1.97,
             -1.5 0.82 2.2, -1.5 0.9 2.5, -1.5 0.82 2.8, -1.5 0.6 3.03, -1.5 0.3 3.12"></Coordinate>       
