--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
           <!--Капот перед-->
           <Shape>
             <Appearance>
-              <Material diffusecolor="0.05 0.4 1"  specularcolor="0.1 0.1 0.1"></material>
+              <Material diffusecolor="0.05 0.4 1"  specularcolor="0.1 0.1 0.1"></Material>
               </Appearance>
             <IndexedFaceSet ccw="true" colorPerVertex="false" convex="false"
                                        creaseAngle="3.14" solid="false"
@@ -506,7 +506,7 @@
           </Shape>
           <Shape>
             <Appearance>
-              <Material  diffusecolor="0.05 0.4 1"  specularcolor="0.1 0.1 0.1"></material>
+              <Material  diffusecolor="0.05 0.4 1"  specularcolor="0.1 0.1 0.1"></Material>
               </Appearance>
             <IndexedFaceSet ccw="true" colorPerVertex="false" convex="false"
                                        creaseAngle="3.14" solid="false"
