--- a/index.html
+++ b/index.html
@@ -869,7 +869,7 @@
               <Appearance> 
                 <Material diffusecolor="0.01 0.01 0.01"  specularcolor="0.01 0.01 0.01"></Material>  
               </Appearance>
-              <Torus outerRadius="0.0667" innerRadius="0.003"></Cylinder>
+              <Torus outerRadius="0.0667" innerRadius="0.003"></Torus>
             </Shape>
             </Transform>
           </Group>
