--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>ЛР#4</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
-    <script type='text/javascript' src='https://www.x3dom.org/download/dev/x3dom-full.js'> </script> 
-    <link rel='stylesheet' type='text/css' href='http://www.x3dom.org/download/x3dom.css'></link> 
+    <title>ЛабРАБ#4 Холодилин К. С.</title>
+    <script type='text/javascript' src='http://www.x3dom.org/download/dev/x3dom-full.js'> </script>
+    <link rel='stylesheet' type='text/css' href='http://www.x3dom.org/download/x3dom.css'></link>
 </head>
 
 <!-- Box, Sphere, Cylinder, Cone, Torus, Text, Transform,
