--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Material, ImageTexture, TextureTransform. -->
                         <texturetransform scale="1 1"></texturetransform>
 						<material diffuseColor="#140c03"></material>
 					</appearance>
-					<cylinder radius="1", height ="2.8"></cylinder>
+					<cylinder radius="1" height ="2.8"></cylinder>
 				</shape>
             </transform>
 
@@ -40,7 +40,7 @@ Material, ImageTexture, TextureTransform. -->
                         <texturetransform scale="1 1"></texturetransform>
 						<material diffuseColor="#140c03"></material>
 					</appearance>
-					<cylinder radius="1", height ="2.5"></cylinder>
+					<cylinder radius="1" height ="2.5"></cylinder>
 
 				</shape>
             </transform>
@@ -53,7 +53,7 @@ Material, ImageTexture, TextureTransform. -->
                         <texturetransform scale="1 1"></texturetransform>
 						<material diffuseColor="#140c03"></material>
 					</appearance>
-					<cylinder radius="1.07", height ="0.3"></cylinder>
+					<cylinder radius="1.07" height ="0.3"></cylinder>
 				</shape>
             </transform>
 
@@ -65,7 +65,7 @@ Material, ImageTexture, TextureTransform. -->
                         <texturetransform scale="1 1"></texturetransform>
 						<material diffuseColor="#140c03"></material>
 					</appearance>
-					<cylinder radius="1.07", height ="0.3"></cylinder>
+					<cylinder radius="1.07" height ="0.3"></cylinder>
 				</shape>
             </transform>
 
@@ -77,7 +77,7 @@ Material, ImageTexture, TextureTransform. -->
                         <texturetransform scale="1 1"></texturetransform>
 						<material diffuseColor="#140c03"></material>
 					</appearance>
-					<cylinder radius="1.07", height ="0.15"></cylinder>
+					<cylinder radius="1.07" height ="0.15"></cylinder>
 				</shape>
             </transform>
 
