--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <title>ЛабРАБ#4 Холодилин К. С.</title>
-    <script type='text/javascript' src='http://www.x3dom.org/download/dev/x3dom-full.js'> </script>
-    <link rel='stylesheet' type='text/css' href='http://www.x3dom.org/download/x3dom.css'></link>
+    <script type='text/javascript' src='https://www.x3dom.org/download/dev/x3dom-full.js'> </script>
+    <link rel='stylesheet' type='text/css' href='https://www.x3dom.org/download/x3dom.css'></link>
 </head>
 
 <!-- Box, Sphere, Cylinder, Cone, Torus, Text, Transform,
