--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>ЛабРАБ#4 Холодилин К. С.</title>
-    <script type='text/javascript' src='https://www.x3dom.org/download/dev/x3dom-full.js'> </script>
-    <link rel='stylesheet' type='text/css' href='https://www.x3dom.org/download/x3dom.css'></link>
-</head>
+<html lang="ru">
+  <head>  
+    <meta charset="utf-8" />
+    <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><![endif]-->
+    <title>Лабораторная работа 4</title>
+    <link rel="stylesheet" href="https://www.x3dom.org/download/x3dom.css" />
+    <script src="https://www.x3dom.org/download/x3dom.js"></script>
+  </head>
 
 <!-- Box, Sphere, Cylinder, Cone, Torus, Text, Transform,
 Material, ImageTexture, TextureTransform. -->
