--- a/index.html
+++ b/index.html
@@ -93,18 +93,16 @@
 		
 		<!-- верхние стабилизаторы-->
 		<Group DEF='UpperStabilizers'>
-			<Transform DEF='StabUpper' rotation='0 1 0 -0.57'>
-				<Transform translation='0 9 1.24'>
+			<Transform DEF='StabUpper' translation='0 9 1.24'>
 				<Shape>
 					<Appearance>
-						<Material diffuseColor='0.4 0.4 0.4'/>
+						<Material diffuseColor='0.4 0.4 0.4'></Material>
 					</Appearance>
 					<IndexedTriangleStripSet index='0 1 2 3 4 -1' solid='false'>
 						<Coordinate point='0 1 -0.55, 0 0.04 -0.55, 0 0.04 0.27, 0 -0.34 -0.55, 0 -0.34 0.27'/>
 					</IndexedTriangleStripSet>
 				</Shape>
-				</Transform>
-		</Transform>
+			</Transform>
 			
 			<Transform rotation='0 1 0 2.094'>
 				<Shape USE='StabUpper'></Shape>
@@ -184,7 +182,7 @@
 		</Group>
 		
 		<!-- двигатели-->
-		<Transform DEF='Engines'>
+		<Group DEF='Engines'>
 			<Transform translation='-0.05 -16.1 0.1' scale='1.8 10 1.8'>
 				<Transform translation='0.6 1.86 0' rotation='1 0 0 1.571'>
 					<Shape>
@@ -228,112 +226,8 @@
 					<Cone bottomradius='0.7' height='1.2'/>
 				</Shape>
 			</Transform>
-		</Transform>
-		
-		<!--турбина-->	
-		<Transform rotation='1 0 0 -1.571' scale='0.024 0.024 0.024' translation='1.04 3.7 0.1'>
-			<Transform DEF='Turbine1'>
-				<Transform rotation='-1 0 0 -1.571' translation='0 0 -2.742'>
-				  <Transform translation='0 2.362 0'>
-					<Shape>
-					  <Appearance>
-						<Material diffuseColor='0.3 0.3 0.3'/>
-					  </Appearance>
-					  <Cylinder height='4.724' radius='5.45'/>
-					</Shape>
-				  </Transform>
-				  <Transform translation='0 4 0'>
-					<Shape>
-					  <Appearance>
-						<Material diffuseColor='0.3 0.3 0.3'/>
-					  </Appearance>
-					  <Sphere radius='5.512'/>
-					</Shape>
-				  </Transform>
-				</Transform>
-				<Transform rotation='0 0 1 1.571'>
-				  <Shape DEF='Spade'>
-					<Appearance>
-					  <Material diffuseColor='0.3 0.3 0.3'/>
-					</Appearance>
-					<IndexedFaceSet coordIndex='0 3 4 -1 4 1 0 -1 1 4 5 -1 5 2 1 -1 3 6 7 -1 7 4 3 -1 4 7 8 -1 8 5 4 -1 9 10 13 -1 13 12 9 -1 10 11 14 -1 14 13 10 -1 12 13 16 -1 16 15 12 -1 13 14 17 -1 17 16 13 -1 0 1 10 -1 10 9 0 -1 1 2 11 -1 11 10 1 -1 2 5 14 -1 14 11 2 -1 5 8 17 -1 17 14 5 -1 8 7 16 -1 16 17 8 -1 7 6 15 -1 15 16 7 -1 6 3 12 -1 12 15 6 -1 3 0 9 -1 9 12 3 -1'>
-					  <Coordinate point='-19.67 0.8586 1.969 0 0 1.969 19.67 -0.8586 1.969 -19.69 0 0 0 0 0 19.69 0 0 -19.67 -0.8586 -1.969 0 0 -1.969 19.67 0.8586 -1.969 -19.65 1.252 1.969 0.01717 0.3933 1.969 19.68 -0.4653 1.969 -19.69 0.3937 0 0 0.3937 0 19.69 0.3937 0 -19.68 -0.4653 -1.969 -0.01717 0.3933 -1.969 19.65 1.252 -1.969'/>
-					</IndexedFaceSet>
-				  </Shape>
-				</Transform>
-				<Transform rotation='0 0 1 1.746'>
-					<Shape USE='Spade'></Shape>   
-				</Transform>
-				<Transform rotation='0 0 1 1.921'>
-					<Shape USE='Spade'></Shape>   
-				</Transform>
-				<Transform rotation='0 0 1 2.096'>
-					<Shape USE='Spade'></Shape>   
-				</Transform>
-				<Transform rotation='0 0 1 2.271'>
-					<Shape USE='Spade'></Shape>   
-				</Transform>
-				<Transform rotation='0 0 1 2.446'>
-					<Shape USE='Spade'></Shape>   
-				</Transform>
-				<Transform rotation='0 0 1 2.261'>
-					<Shape USE='Spade'></Shape>   
-				</Transform>
-				<Transform rotation='0 0 1 2.436'>
-					<Shape USE='Spade'></Shape>   
-				</Transform>
-				<Transform rotation='0 0 1 2.611'>
-					<Shape USE='Spade'></Shape>   
-				</Transform>
-				<Transform rotation='0 0 1 2.786'>
-					<Shape USE='Spade'></Shape>   
-				</Transform>
-				<Transform rotation='0 0 1 2.961'>
-					<Shape USE='Spade'></Shape>   
-				</Transform>
-				<Transform rotation='0 0 1 3.136'>
-					<Shape USE='Spade'></Shape>   
-				</Transform>
-				<Transform rotation='0 0 1 3.311'>
-					<Shape USE='Spade'></Shape>   
-				</Transform>
-				<Transform rotation='0 0 1 3.486'>
-					<Shape USE='Spade'></Shape>   
-				</Transform>
-				<Transform rotation='0 0 1 3.661'>
-					<Shape USE='Spade'></Shape>   
-				</Transform>
-				<Transform rotation='0 0 1 3.836'>
-					<Shape USE='Spade'></Shape>   
-				</Transform>
-				<Transform rotation='0 0 1 4.011'>
-					<Shape USE='Spade'></Shape>   
-				</Transform>
-				<Transform rotation='0 0 1 4.168'>
-					<Shape USE='Spade'></Shape>   
-				</Transform>
-				<Transform rotation='0 0 1 4.361'>
-					<Shape USE='Spade'></Shape>   
-				</Transform>
-				<Transform rotation='0 0 1 4.536'>
-					<Shape USE='Spade'></Shape>   
-				</Transform>
-			</Transform>
-			<Transform DEF='Turbine2' translation='0 0 -10' rotation='1 0 0 3.14'>
-				<Transform USE='Turbine1'> </Transform>
-			</Transform>
-		</Transform>
-		
-		<Transform rotation='1 0 0 -1.571' scale='0.024 0.024 0.024' translation='-0.61 3.7 0.81'>
-			<Transform USE='Turbine1'></Transform>
-			<Transform USE='Turbine2'> </Transform>
-		</Transform>
-		
-		<Transform rotation='1 0 0 -1.571' scale='0.024 0.024 0.024' translation='-0.4 3.7 -0.95'>
-			<Transform USE='Turbine1'></Transform>
-			<Transform USE='Turbine2'> </Transform>
-		</Transform>
-		
+		</Group>
+	
 		<!-- площадка-->
 		<Shape>
 			<Appearance>
@@ -394,15 +288,6 @@
 				<Shape USE="Light"></Shape>
 			</Transform>
 		</Group>
-		
-		<!--Анимация турбины-->
-		<TimeSensor DEF='TS' cycleInterval='2' loop='true'></TimeSensor>
-		<OrientationInterpolator DEF='OrientInt' key='0 0.5 1' keyValue='0 0 1 0, 0 0 1 -3.14, 0 0 1 -6.28'>
-		<Route fromNode='TS' fromField='fraction_changed' toNode='OrientInt' toField='set_fraction'>
-		</Route>
-		<Route fromNode='OrientInt' fromField='value_changed' toNode='Turbine1' toField='set_rotation'>
-		</Route>
-		
     </Scene>
   </X3D>
 </body>
